--- a/Laboratorul I/WebProject/home.html
+++ b/Laboratorul I/WebProject/home.html
@@ -2,106 +2,95 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="IndexStyles.css">
+    <title>Home</title>
+
+    <link rel="stylesheet" href="Styles/home.css">
+    <link rel="stylesheet" href="Styles/template.css">
 
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-    <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.css"/> -->
-    <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick-theme.css"/> -->
-
-    <title>Story</title>
   </head>
   <body>
 
-    <div class="menubar">
-      <header class="header">
-        <div class="logo">
-          <a href="Home.html" class="item">Story</a>
-        </div>
-        <nav class="menu">
-          <a href="New.html" class="item link">New</a>
-          <a href="Top.html" class="item link">Top</a>
-          <a href="Catalog.html" class="item link">Collection</a>
-        </nav>
-        <form class="" action="index.html" method="post">
-          <input class="searcbox" type="text" name="Search" placeholder="Type something">
-        </form>
-        <nav>
-          <a href="login.html" class="item link">Login</a>
-          <a href="Register.html" class="item link">Register</a>
-        </nav>
-      </header>
-    </div>
+    <header>
+      <a href="home.html" class="logo">Story</a>
 
-    <div class="middle">
-      <div class="foto"></div>
+      <nav>
+        <a href="top.html">Top</a>
+        <a href="#">Collection</a>
+      </nav>
+
+      <form class="" action="index.html" method="post">
+        <input type="text" name="searcbox" value="">
+      </form>
+
+      <nav>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
+      </nav>
+    </header>
+
+
+    <div class="mainbox">
+      <div class="background"></div>
 
       <div class="topbooks">
-        <span class="listtitle">Tops</span>
+        <span class="slider__title">Tops</span>
         <div class="slider">
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/treipurclusi.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/treipurclusi.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
-          <div class="slider__item">
-            <a href="text.html">
-              <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
-              </div>
-              <span>Title</span>
-            </a>
-          </div>
-          <div class="slider__item">
-            <a href="text.html">
-              <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
-              </div>
-              <span>Title</span>
-            </a>
-          </div>
+
         </div>
       </div>
 
@@ -124,148 +113,133 @@
       </div>
 
 
+
       <div class="latest">
-        <span class="listtitle">Latest</span>
+        <span class="slider__title">Latest</span>
+
         <div class="slider">
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
-          <div class="slider__item">
-            <a href="text.html">
-              <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
-              </div>
-              <span>Title</span>
-            </a>
-          </div>
-          <div class="slider__item">
-            <a href="text.html">
-              <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
-              </div>
-              <span>Title</span>
-            </a>
-          </div>
+
         </div>
       </div>
+
+
 
       <div class="newBooks">
-        <span class="listtitle">New Releases</span>
+        <span class="slider__title">New Releases</span>
+
         <div class="slider">
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
+
           <div class="slider__item">
             <a href="text.html">
               <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
-              </div>
-              <span>Title</span>
-            </a>
-          </div>
-          <div class="slider__item">
-            <a href="text.html">
-              <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
-              </div>
-              <span>Title</span>
-            </a>
-          </div>
-          <div class="slider__item">
-            <a href="text.html">
-              <div class="img_container">
-                <img src="images/elf.jpg" alt="" class="slide__image">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
           </div>
         </div>
       </div>
+
     </div>
 
-    <footer class="footer">
+    <footer>
       <h1>Futer</h1>
     </footer>
 
