--- a/Laboratorul I/WebProject/register.html
+++ b/Laboratorul I/WebProject/register.html
@@ -2,32 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Register</title>
 
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Styles/template.css">
+    <link rel="stylesheet" href="Styles/register.css">
+
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   </head>
   <body>
 
-    <div class="menubar">
-      <header class="header">
-        <div class="logo">
-          <a href="Home.html" class="item">Story</a>
-        </div>
-        <nav class="menu">
-          <a href="New.html" class="item link">New</a>
-          <a href="Top.html" class="item link">Top</a>
-          <a href="Catalog.html" class="item link">Collection</a>
-        </nav>
-        <form class="" action="index.html" method="post">
-          <input class="searcbox" type="text" name="Search" placeholder="Type something">
-        </form>
-        <nav>
-          <a href="login.html" class="item link">Login</a>
-          <a href="Register.html" class="item link">Register</a>
-        </nav>
-      </header>
-    </div>
+    <header>
+      <a href="home.html" class="logo">Story</a>
+
+      <nav>
+        <a href="top.html">Top</a>
+        <a href="#">Collection</a>
+      </nav>
+
+      <form class="" action="index.html" method="post">
+        <input type="text" name="searcbox" value="">
+      </form>
+
+      <nav>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
+      </nav>
+    </header>
 
 
     <div class="mainbox">
@@ -44,7 +44,7 @@
       <div class="socialbox">
         <span>Register with Facebook</span>
         <a href="#" class="facebooklink">
-            <img src="images/facebook2.png" alt="Facebook Icon" class="facebookicon">
+            <img src="Styles/Images/facebook2.png" alt="Facebook Icon" class="facebookicon">
         </a>
       </div>
 
