--- a/Laboratorul III/WebProject/home.html
+++ b/Laboratorul III/WebProject/home.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Home</title>
 
+    <link rel="stylesheet" href="Styles/home.css">
+    <link rel="stylesheet" href="Styles/template.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   </head>
   <body>
 
@@ -37,6 +41,24 @@
             <a href="text.html">
               <div class="img_container">
                 <img src="Styles/Images/treipurclusi.jpg" alt="" class="slide__image">
+              </div>
+              <span>Title</span>
+            </a>
+          </div>
+
+          <div class="slider__item">
+            <a href="text.html">
+              <div class="img_container">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
+              </div>
+              <span>Title</span>
+            </a>
+          </div>
+
+          <div class="slider__item">
+            <a href="text.html">
+              <div class="img_container">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
               </div>
               <span>Title</span>
             </a>
@@ -132,6 +154,24 @@
             </a>
           </div>
 
+          <div class="slider__item">
+            <a href="text.html">
+              <div class="img_container">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
+              </div>
+              <span>Title</span>
+            </a>
+          </div>
+
+          <div class="slider__item">
+            <a href="text.html">
+              <div class="img_container">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
+              </div>
+              <span>Title</span>
+            </a>
+          </div>
+
         </div>
       </div>
 
@@ -177,6 +217,23 @@
             </a>
           </div>
 
+          <div class="slider__item">
+            <a href="text.html">
+              <div class="img_container">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
+              </div>
+              <span>Title</span>
+            </a>
+          </div>
+
+          <div class="slider__item">
+            <a href="text.html">
+              <div class="img_container">
+                <img src="Styles/Images/elf.jpg" alt="" class="slide__image">
+              </div>
+              <span>Title</span>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -185,6 +242,10 @@
     <footer>
       <h1>Futer</h1>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts/slick.min.js"></script>
+    <script src="scripts/script.js"></script>
 
   </body>
 </html>
