--- a/Laboratorul II/WebProject/register.html
+++ b/Laboratorul II/WebProject/register.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Register</title>
 
+    <link rel="stylesheet" href="Styles/template.css">
+    <link rel="stylesheet" href="Styles/register.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   </head>
   <body>
 
