--- a/Laboratorul III/WebProject/login.html
+++ b/Laboratorul III/WebProject/login.html
@@ -2,8 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Register</title>
+    <title>Login</title>
 
+    <link rel="stylesheet" href="Styles/login.css">
+    <link rel="stylesheet" href="Styles/template.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   </head>
   <body>
 
@@ -26,19 +30,22 @@
     </header>
 
 
+
     <div class="mainbox">
-      <div class="title">Register</div>
+      <div class="title">Login</div>
 
       <form class="input" action="index.html" method="post">
-        <input type="text" name="name" placeholder="Name" class="loginitem">
         <input type="text" name="email" placeholder="Email" class="loginitem">
         <input type="password" name="password" placeholder="Password" class="loginitem">
-        <input type="password" name="confirm" placeholder="One more" class="loginitem">
-        <input type="submit" name="submit" value="Register" class="loginbtn">
+        <input type="submit" name="submit" value="Submit" class="loginbtn">
       </form>
 
+      <div class="registerbox">
+        <span>You're not with us? <a href="register.html">Register</a></span>
+      </div>
+
       <div class="socialbox">
-        <span>Register with Facebook</span>
+        <span>Login with Facebook</span>
         <a href="#" class="facebooklink">
             <img src="Styles/Images/facebook2.png" alt="Facebook Icon" class="facebookicon">
         </a>
