Adaugata schimbarea temei pentru pagina home

--- a/Laboratorul III/WebProject/home.html
+++ b/Laboratorul III/WebProject/home.html
@@ -31,7 +31,7 @@
 
 
     <div class="mainbox">
-      <div class="background"></div>
+      <div onclick="changeTheme()" class="background"></div>
 
       <div class="topbooks">
         <span class="slider__title">Tops</span>
@@ -246,6 +246,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/slick.min.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/theme.js"></script>
 
   </body>
 </html>
