Adaugata schimbul temei pentru toate paginile si realizata salvarea temei in local storage. Adaugata adaptivitatea paginilor. Adaugat meniu dinamic

--- a/Laboratorul II/WebProject/login.html
+++ b/Laboratorul II/WebProject/login.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Login</title>
 
     <link rel="stylesheet" href="Styles/login.css">
@@ -14,19 +15,28 @@
     <header>
       <a href="home.html" class="logo">Story</a>
 
-      <nav>
-        <a href="top.html">Top</a>
-        <a href="#">Collection</a>
-      </nav>
+      <div class="menu">
+        <nav>
+          <a href="top.html" class="nav__links">Top</a>
+          <a href="#" class="nav__links">Dark/Light</a>
+        </nav>
 
-      <form class="" action="index.html" method="post">
-        <input type="text" name="searcbox" value="">
-      </form>
+        <form class="" action="index.html" method="post">
+          <input type="text" name="searcbox" value="">
+        </form>
 
-      <nav>
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
-      </nav>
+        <nav>
+          <a href="login.html" class="nav__links">Login</a>
+          <a href="register.html" class="nav__links">Register</a>
+        </nav>
+
+      </div>
+
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </header>
 
 
