--- a/Laboratorul III/WebProject/register.html
+++ b/Laboratorul III/WebProject/register.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Register</title>
 
     <link rel="stylesheet" href="Styles/template.css">
@@ -14,19 +15,28 @@
     <header>
       <a href="home.html" class="logo">Story</a>
 
-      <nav>
-        <a href="top.html">Top</a>
-        <a href="#">Collection</a>
-      </nav>
+      <div class="menu">
+        <nav>
+          <a href="top.html" class="nav__links">Top</a>
+          <a href="#" class="nav__links" onclick="changeTheme()">Dark/Light</a>
+        </nav>
 
-      <form class="" action="index.html" method="post">
-        <input type="text" name="searcbox" value="">
-      </form>
+        <form class="" action="index.html" method="post">
+          <input type="text" name="searcbox" value="">
+        </form>
 
-      <nav>
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
-      </nav>
+        <nav>
+          <a href="login.html" class="nav__links">Login</a>
+          <a href="register.html" class="nav__links">Register</a>
+        </nav>
+
+      </div>
+
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
     </header>
 
 
@@ -49,6 +59,9 @@
       </div>
 
     </div>
+
+    <script src="scripts/theme.js"></script>
+    <script src="scripts/menu.js"></script>
 
   </body>
 </html>
