resized images from lab1

--- a/Laboratorul I/WebProject/home.html
+++ b/Laboratorul I/WebProject/home.html
@@ -6,13 +6,19 @@
 
   </head>
   <body>
+    <style>
+      .slide__image {
+        width: 200px;
+      }
+    </style>
+
 
     <header>
       <a href="home.html" class="logo">Story</a>
 
       <nav>
         <a href="top.html">Top</a>
-        <a href="#">Collection</a>
+        <a href="#">Dark/Light</a>
       </nav>
 
       <form class="" action="index.html" method="post">
