--- a/Laboratorul I/WebProject/top.html
+++ b/Laboratorul I/WebProject/top.html
@@ -6,13 +6,19 @@
 
   </head>
   <body>
+    <style>
+      .titlefoto {
+        width: 200px;
+      }
+    </style>
+
 
     <header>
       <a href="home.html" class="logo">Story</a>
 
       <nav>
         <a href="#">Top</a>
-        <a href="#">Collection</a>
+        <a href="#">Dark/Light</a>
       </nav>
 
       <form class="" action="index.html" method="post">
