--- a/Laboratorul I/WebProject/text.html
+++ b/Laboratorul I/WebProject/text.html
@@ -12,7 +12,7 @@
 
       <nav>
         <a href="top.html">Top</a>
-        <a href="#">Collection</a>
+        <a href="#">Dark/Light</a>
       </nav>
 
       <form class="" action="index.html" method="post">
