Js theme changed

--- a/Laboratorul III/WebProject/text.html
+++ b/Laboratorul III/WebProject/text.html
@@ -59,7 +59,7 @@
         occaecat cupidatat non proident, sunt in culpa qui officia
         deserunt mollit anim id est laborum.</p>
       </div>
-      <div class="autorbox">Writted by : <a href="#" class="author">author</span>
+      <div class="autorbox">Writted by : <a href="#" class="author">author</span></a>
     </div>
 
     </div>
