--- a/Laboratorul IV/webproject/login.html
+++ b/Laboratorul IV/webproject/login.html
@@ -65,6 +65,8 @@
 
     <script src="scripts/theme.js"></script>
     <script src="scripts/menu.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="scripts/login.js"></script>
 
   </body>
 </html>
