--- a/Laboratorul IV/webproject/home.html
+++ b/Laboratorul IV/webproject/home.html
@@ -280,8 +280,7 @@
     </div>
 
     <footer>
-      <h1>Futer</h1>
-      <a href="Subscription.html">Subscription</a>
+      <h1><a href="Subscription.html">Subscription</a></h1>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
