--- a/Laboratorul IV/webproject/login.html
+++ b/Laboratorul IV/webproject/login.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="styles/template.css">
 
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+
+    <style media="screen">
+      label.error{
+        color: red;
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
 
@@ -63,10 +70,11 @@
 
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script src="scripts/theme.js"></script>
     <script src="scripts/menu.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="scripts/login.js"></script>
+    <script src="scripts/login2.js"></script>
 
   </body>
 </html>
