--- a/Laboratorul IV/webproject/register.html
+++ b/Laboratorul IV/webproject/register.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="styles/register.css">
 
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+
+    <style media="screen">
+      label.error{
+        color: red;
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
 
@@ -40,13 +47,13 @@
     </header>
 
 
-    <div class="mainbox">
+    <div class="mainbox" style="height: 420px">
       <div class="title">Register</div>
 
       <form class="input" action="forms/register.php" method="post">
         <input type="text" name="name" placeholder="Name" class="loginitem">
         <input type="text" name="email" placeholder="Email" class="loginitem">
-        <input type="password" name="password" placeholder="Password" class="loginitem">
+        <input type="password" name="password" placeholder="Password" class="loginitem" id="password">
         <input type="password" name="confirm" placeholder="One more" class="loginitem">
         <input type="submit" name="submit" value="Register" class="loginbtn">
       </form>
@@ -60,10 +67,11 @@
 
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script src="scripts/theme.js"></script>
     <script src="scripts/menu.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="scripts/register.js"></script>
+    <script src="scripts/register2.js"></script>
 
 
     </script>
